# UnopinionatedLibrary

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
